Fixed responsive issues so works on small and large screens

--- a/styles.scss
+++ b/styles.scss
@@ -13,6 +13,7 @@ $table-colour: rgb(121, 116, 128);
 }
 body {
   background-color: rgb(255, 255, 255);
+  min-width: 500px;
 }
 .gameName {
   font-family: $main-font;
@@ -233,6 +234,9 @@ body {
 
 // ------------------------- Larger screens -----------------------------
 @media screen and (min-width: 768px) {
+  body {
+    max-width: 1600px;
+  }
   .gameName {
     gap: 20px;
     &__title {
